[package]
name = "boolean-circuit"
version = "1.0.0"
edition = "2021"
authors = ["chriseth <chriseth.github@gmail.com>"]
description = "A library to import, modify and export boolean circuits."
documentation = "https://docs.rs/boolean-circuit"
repository = "https://github.com/chriseth/boolean-circuit"
license = "MIT OR Apache-2.0"
keywords = ["circuit", "gate", "AIGER", "CNF", "DIMACS"]

[dependencies]
itertools = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
